objects/Vacation__c.object
<CustomObject>
    <fields>
        <fullName>Backup_Resource_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Backup Resource Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>Vacations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_month__c</fullName>
        <formula>MONTH( TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dates_of_vacaton__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dates of vacaton</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>TEXT(  Type_of_Leave__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_work_Performed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details of work Performed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Week_End__c</fullName>
        <formula>DATE(
YEAR(  End_Date__c  ),
Month(End_Date__c),
DAY(End_Date__c)-MOD(End_Date__c - DATE(1900, 1, 1), 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date of Week_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Floating_Holidays__c</fullName>
        <label>Floating Holidays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pongal January 14</fullName>
                </value>
                <value>
                    <fullName>Guru Gobind Singh&apos;s Birthday January 18</fullName>
                </value>
                <value>
                    <fullName>Thiruvalluvar Day January 15</fullName>
                </value>
                <value>
                    <fullName>Uzhavar Thirunal January 16</fullName>
                </value>
                <value>
                    <fullName>ID-E-Milad January 25</fullName>
                </value>
                <value>
                    <fullName>Basant Panchami February 15</fullName>
                </value>
                <value>
                    <fullName>Next day of MahasivarathriMarch 11</fullName>
                </value>
                <value>
                    <fullName>Holika Dahan March 26</fullName>
                </value>
                <value>
                    <fullName>Holi March 27</fullName>
                </value>
                <value>
                    <fullName>Good Friday March 29</fullName>
                </value>
                <value>
                    <fullName>Chandramana Ugadi April 11</fullName>
                </value>
                <value>
                    <fullName>Bengali New Year Day April 15</fullName>
                </value>
                <value>
                    <fullName>Ram Navami April 19</fullName>
                </value>
                <value>
                    <fullName>Mahavir Jayanti April 24</fullName>
                </value>
                <value>
                    <fullName>Shab-E-Meraj June 07</fullName>
                </value>
                <value>
                    <fullName>Shab-E-Barath June 25</fullName>
                </value>
                <value>
                    <fullName>Jamat -Ul- Vida August 02</fullName>
                </value>
                <value>
                    <fullName>Shab-E-Qadar August 05</fullName>
                </value>
                <value>
                    <fullName>Varalakshmi Vratham August 16</fullName>
                </value>
                <value>
                    <fullName>Raksha Bandan August 20</fullName>
                </value>
                <value>
                    <fullName>Janmashtami August 28</fullName>
                </value>
                <value>
                    <fullName>Ganesh Chaturthi September 09</fullName>
                </value>
                <value>
                    <fullName>Onam September 16</fullName>
                </value>
                <value>
                    <fullName>Mahalaya Amavasya October 04</fullName>
                </value>
                <value>
                    <fullName>Durga Puja: Saptami October 11</fullName>
                </value>
                <value>
                    <fullName>Bakrid October 16</fullName>
                </value>
                <value>
                    <fullName>Karva Chouth October 22</fullName>
                </value>
                <value>
                    <fullName>Balipadyami November 04</fullName>
                </value>
                <value>
                    <fullName>Bhai Dhuj November 05</fullName>
                </value>
                <value>
                    <fullName>Chhat Puja November 08</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Of_Vacation__c</fullName>
        <formula>Hours_Of_Vacation_month_1__c  +  Hours_Of_Vacation_month_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Of Vacation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Of_Vacation_month_1__c</fullName>
        <label>Hours Of Vacation month 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Of_Vacation_month_2__c</fullName>
        <label>Hours Of Vacation month 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAllDayEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAllDayEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MonthNumber__c</fullName>
        <label>MonthNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <formula>CASE(
MONTH(Start_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_of_End__c</fullName>
        <formula>MONTH( End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Vacation_Days__c</fullName>
        <label>No.of Vacation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Select_Status__c</fullName>
        <label>Select Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Past Vacations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Week_strt__c</fullName>
        <formula>DATE(
    YEAR( Start_Date__c ),
    Month(Start_Date__c),
    DAY(Start_Date__c)-MOD(Start_Date__c - DATE(1900, 1, 1), 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date of Week_start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Leave__c</fullName>
        <label>Type of Leave</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SickLeave</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Planned Vacation</fullName>
                </value>
                <value>
                    <fullName>Floating</fullName>
                </value>
                <value>
                    <fullName>Compensatory Off</fullName>
                </value>
                <value>
                    <fullName>Emergency / Unplanned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacation_Applied_On__c</fullName>
        <formula>DATEVALUE(Dates_of_vacaton__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacation Applied On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vocation_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vocation Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Weekly Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_End__c</fullName>
        <formula>YEAR( End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>team_lead_name__c</fullName>
        <formula>Contact__r.Team_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>team lead name</label>
        <type>Text</type>
    </fields>
    <label>Out of Office</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Out of Office Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out of Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Vacation_End_Date_Greater_Start</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date should be greater than of Start Date</errorMessage>
    </validationRules>
</CustomObject>